@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-29T00:44:52Z",
-  "count_outdated" : 86,
-  "uniques_outdated" : 68,
+  "timestamp" : "2024-10-01T00:45:13Z",
+  "count_outdated" : 87,
+  "uniques_outdated" : 69,
   "count" : 89,
   "uniques" : 71,
   "clones" : [
-    {
-      "timestamp": "2024-09-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-19T00:00:00Z",
       "count": 1,
